# ai_workshop

./: Makefile  opencode.json  pyproject.toml  requirements.txt
